<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:showIn="@layout/activity_update_password">

    <ImageView
        android:id="@+id/imagemFragmentFotos"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@mipmap/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_password"
                android:imeActionId="@+id/sign_up"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/v_line"
            android:layout_below="@+id/til_new_password"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#999"/>

        <TextView
            android:padding="5dp"
            android:background="#ffc"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:id="@+id/tv_info"
            android:layout_below="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_info"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_below="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/sign_up"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_logout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:onClick="update"
            android:gravity="center"
            android:text="@string/update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnVoltarTelaInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VOLTAR TELA INICIAL" />

</LinearLayout>